--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 	</ul>
 
 	<h2>Our Process</h2>
-		<img src="">
+		<img src="image/identify.svg">
 
 	<h3>Identity</h3>
 		<p>
 			We focus on the most important details.
 		</p>
-		<img src="">
+		<img src="image/Understand.svg">
 
 	<h3>Understand</h3>
 		<p>
 			We study our projects inside and out.
 		</p>
-		<img src="">
 
+		<img src="image/execute.svg">
 	<h3>Execute</h3>
 		<p>
 			We put everything we have into our work!
@@ -53,7 +53,7 @@
 			Twitter: @test
 		</p>
 	<footer>
-		&trade;Broadway 2017
+		&copy;Broadway 2017
 		<ul class="ftnav">
 			<li><a href="home.html">Home</a></li>
 			<li><a href="#">About</a></li>
