--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="./base.css">
 </head>
 <body>
-	<h1></h1>
-	<ul>
-		<li>Home</li>
-		<li>About</li>
-		<li>Work</li>
-		<li>Team</li>
-		<li>Contact</li>
-	</ul>
-
-	<h2>Our Process</h2>
+	<header id="home">
+		<h1>Broadway Design</h1>
+		<ul>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#about">About</a></li>
+			<li><a href="#work">Work</a></li>
+			<li><a href="#team">Team</a></li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</header>
+	<h2 id="about">Our Process</h2>
 		<img src="image/identify.svg">
 
 	<h3>Identity</h3>
@@ -30,37 +31,42 @@
 		</p>
 
 		<img src="image/execute.svg">
-	<h3>Execute</h3>
+	<h3 id="work">Execute</h3>
 		<p>
 			We put everything we have into our work!
 		</p>
 
-	<h3>Designed in New York</h3>
+	<h3 class="halfway">Designed in New York</h3>
 	<h3>Portfolio</h3>
 		<p>
 			Coming soon.
 		</p>
 
-	<h3>Team</h3>
+	<h3 id="team">Team</h3>
 		<p>
 			We're Hiring!
 		</p>
 
-	<h3>Contact</h3>
-		<p>
-			Phone: (555) 555 - 5555 <br>
-			E-mail: test@example.com <br>
-			Twitter: @test
-		</p>
+	<h3 id="contact">Contact</h3>
+		
+			<p class="addy">Phone: (555) 555 - 5555</p>
+			<p class="addy">E-mail: test@example.com</p> 
+			<p class="addy">Twitter: @test</p>
+		
 	<footer>
-		&copy;Broadway 2017
-		<ul class="ftnav">
-			<li><a href="home.html">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Work</a></li>
-			<li><a href="#">Team</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
+		
+			<p>
+				&copy;Broadway 2017
+			</p>
+		
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#work">Work</a></li>
+				<li><a href="#team">Team</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		
 	</footer>
 </body>
 </html>
